--- a/Employee/src/main/resources/application.properties
+++ b/Employee/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306//dbname
+spring.datasource.username=root
+spring.datasource.password=root
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQl=DEBUG
+logging.level.org.hibernate.type=TRACE
